--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Мой JS</title>
     <meta name="description" content="Всему надо учиться">
     <meta name="robots" content="noindex">
-    <meta name="keywords" content="Кейворды для тестовой странички">
+    <meta name="keywords" content="Кейворды для тестовой странички для гита">
     <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
